# quackitect

./: .gitattributes  .gitignore  AGENTS.md  DASHBOARD.md  HANDOVER.md  README.md  pyproject.toml  quack.cmd
.claude/: settings.json
.claude/commands/: engage.md  note.md  review.md
.github/: copilot-instructions.md
.obsidian/: workspace.json
.obsidian/plugins/obsidian-excalidraw-plugin/: data.json
.quack/: attest.json  config.toml  ears-baseline.json
.quack/engine/: golden-root.txt
.quack/tools/: go.cmd
product/brand/: palette.md  voice.md
product/engine-go/: cli.go  cli_test.go  coverage.go  engine.go  go.mod  main.go  ops.go  parse.go  parse_test.go  readout.go  report.go  report_assets.go  report_watch.go  resolver.go  selftest.go  selftest_trust.go  trust.go
product/engine-go/.gotmp/: go_dump.txt  go_status.txt  py_dump.txt  (+1 more)
product/quackitect/: __init__.py  __main__.py  cli.py  engine.py  report.py
spec/decisions/: command-surface.md  composition.md  engine-selftest.md  evidence-model.md  fill-adjudicate.md  guidance.md  index.md  input-hashing.md  merkle-dag.md  notes-pipeline.md  pivot.md  planning.md  refine-track.md  state-model.md  structure.md  suspect-bless.md  test-engine-core.md  test-method.md  test-surface.md  versioning.md
spec/trace/: need-engage.md  need-engine-reuse.md  need-implementation.md  need-note.md  need-review.md  uc-engage-next.md  uc-engage-refine.md  uc-engage-ship.md  uc-engage-start.md  uc-note-capture.md  uc-review-readout.md  uc-review-report.md  uc-review-retro.md  uc-run-dep-free.md  uc-vendor-engine.md
(+534 files in other folders)
